<resources>
    <string name="app_name">Love 42</string>
    <string name="sign_in">Sign In</string>
    <string name="logo_42">42 Logo</string>
    <string name="intra_id">Intra ID</string>
    <string name="profile_picture">profile picture</string>
    <string name="fill_out_profile">Fill Out Profile</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="intra_url">Intra URL</string>
    <string name="bio">Bio</string>
    <string name="github" translatable="false">GitHub ID</string>
    <string name="edit_profile_photo">Edit profile photo</string>
    <string name="slack_id">Slack member ID</string>
    <string name="what_is_slack_id">What is slack member ID?</string>
    <string name="slack_id_description">Slack member ID can be found in your slack\'s 42born2code profile. It is used for someone to DM you in slack.</string>
    <string name="close">Close</string>
    <string name="preferred_language">Preferred languages</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sex">Sex</string>
    <string name="campus">Campus</string>
    <string name="permission_needed">Permission to read external storage is needed</string>
    <string name="fill_out_slack">Please fill out Slack member ID</string>
    <string name="my_profile">My Profile</string>
    <string name="find">Find</string>
    <string name="match">Match</string>
    <string name="profile_uploaded">Profile uploaded</string>
    <string name="dislike">Dislike</string>
    <string name="like">Like</string>
    <string name="no_matches">There is no match yet! Find your love by swiping cards!</string>
    <string name="no_candidates">No one left to swipe! Let your friends in campus join the app!</string>
    <string name="match_occurred">It\'s a match!</string>
    <string name="match_description">Move to match tab below and see who it is!</string>
    <string name="contact">Contact</string>
    <string name="slack_message">Send slack message</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="sending_email">Sending Email</string>
    <string name="delete_account">Delete account</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="show_global">Show me members from other campus</string>
</resources>