<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mylittleproject.love42.ui.MyProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                tools:context=".ui.MyProfileFragment">

                <ImageView
                    android:id="@+id/iv_profile"
                    imageURL="@{viewModel.myProfile.imageURI}"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/round_rectangle"
                    android:contentDescription="@string/profile_picture"
                    app:layout_constraintDimensionRatio="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.3" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/edit_profile_photo"
                    app:fabSize="mini"
                    app:layout_constraintBottom_toBottomOf="@id/iv_profile"
                    app:layout_constraintEnd_toEndOf="@id/iv_profile"
                    app:srcCompat="@drawable/ic_baseline_edit_24" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@{viewModel.myProfile.name}"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="@id/iv_profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_profile"
                    app:layout_constraintTop_toTopOf="@id/iv_profile"
                    tools:text="Sumyeong Kim" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_github"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:hint="@string/github"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_profile">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textUri"
                        android:text="@={viewModel.myProfile.gitHubURL}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_slack_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:hint="@string/slack_id"
                    app:layout_constraintEnd_toStartOf="@id/btn_what_is_slack_id"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tf_github">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textUri"
                        android:text="@={viewModel.myProfile.slackMemberID}" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/btn_what_is_slack_id"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:background="?android:selectableItemBackground"
                    android:contentDescription="@string/what_is_slack_id"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="@id/tf_slack_id"
                    app:layout_constraintDimensionRatio="1"
                    app:layout_constraintEnd_toEndOf="@id/tf_github"
                    app:layout_constraintHorizontal_weight="0.1"
                    app:layout_constraintStart_toEndOf="@id/tf_slack_id"
                    app:layout_constraintTop_toTopOf="@id/tf_slack_id"
                    app:srcCompat="@drawable/ic_question_mark_button_svgrepo_com" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_languages"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tf_slack_id">

                    <AutoCompleteTextView
                        android:id="@+id/tv_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/preferred_language"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_languages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:layoutDirection="locale"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tf_languages" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:hint="@string/bio"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cg_languages">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:text="@={viewModel.myProfile.bio}" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/g_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="v_dim, pid_loading" />

        <View
            android:id="@+id/v_dim"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/black_transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/pid_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>